--- a/src/config/sidebar.yml
+++ b/src/config/sidebar.yml
@@ -1,24 +1,46 @@
 # Sidebar navigation
 
-- label: "Introduction"
+- label: " ⚡️ Introduction"
   link: "/"
-- label: "Getting started"
-  link: "/getting-started"
-- label: Usage
+- label: Basic
   items:
-    - label: "Creating docs"
-      link: "/usage/creating-docs"
-    - label: "Navigation"
-      link: "/usage/navigation"
-    - label: "Shadowing"
-      link: "/usage/shadowing"
-- label: More
+    - label: "💻 Basic Cli"
+      link: "/basic/cli"
+    - label: "📌 Github - Assignment"
+      link: "/basic/git"
+- label: "Conditional & Data Type"
   items:
-    - label: FAQ
-      link: /faq
-    - label: Changelog
-      link: /changelog
-- label: Community
+    - label: "🪗 Advanced Conditional"
+      link: "/conditional/advanced-conditional"
+- label: Loop & Iteration
+  items:
+    - label: "-"
+      link: "/#"
+- label: EcmaScript 6
+  items:
+    - label: "-"
+      link: "/#"
+- label: Function
+  items:
+    - label: "-"
+      link: "/#"
+- label: Array
+  items:
+    - label: "-"
+      link: "/#"
+- label: Modular Function
+  items:
+    - label: "-"
+      link: "/#"
+- label: Object
+  items:
+    - label: "-"
+      link: "/#"
+- label: Array Of Object
+  items:
+    - label: "-"
+      link: "/#"
+- label: 🌏 Community
   items:
     - label: "Github"
-      link: https://github.com/rocketseat/gatsby-themes
+      link: https://github.com/bagusrizkis/lectureH8
